Z-index fix for what time where overlay

--- a/scss/modules/_times.scss
+++ b/scss/modules/_times.scss
@@ -1,5 +1,6 @@
 .times {
   position: fixed;
+  z-index: 5;
   left: 0;
   top: 0;
   right: 0;
